# aoc

./: .gitignore  .pre-commit-config.yaml  README.md
2023/go/: main.go
2023/go/days/: 01.go  01_test.go  02.go  day-solver.go
2023/python/: .pre-commit-config.yaml  README.md  advent.py  pyproject.toml
2023/python/days/: 01.py
2023/python/utils/: logger.py
2023/rust/: Cargo.toml
2023/rust/src/: challenge.rs  executable.rs  main.rs
2023/rust/src/days/: mod.rs  r01.rs
c/: build.zig
c/src/: main.c
cpp/: .gitignore  README.md  build.zig  build.zig.zon
cpp/src/: 01.cpp  challenge.cpp  main.cpp
cpp/src/lib/: format.cpp  logger.cpp  number.cpp  resources.cpp
go/: README.md  go.mod  go.sum  main.go
go/advent/: challenge.go
go/cmd/01/: 01_test.go  main.go
go/cmd/02/: 02_test.go  main.go
go/cmd/03/: main.go
go/cmd/04/: 04_test.go  main.go
go/days/: 01.go  01_test.go  02.go  02_test.go  day-solver.go
python/: README.md  advent.py  pyproject.toml
python/days/: 01.py
python/utils/: logger.py
rust/: README.md
rust/src/: challenge.rs
zig/: README.md  build.zig  build.zig.zon
zig/lib/: challenge.zig  lib.zig  number.zig
zig/src/: 01.zig
zig/src/2023/: 01.zig
zig/src/2024/: 01.zig  02.zig
