[project]
name = "advent-of-code-2023"
description = "Solutions to https://adventofcode.com/2023"
version = "0.0.1"
authors = [{ name = "Nuno Mendes", email = "nunoricardomendes@gmail.com" }]
maintainers = [{ name = "Nuno Mendes", email = "nunoricardomendes@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.urls]
Repository = "https://github.com/nm-remarkable/aoc"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [".", "days", "utils"]

[project.scripts]
advent = "advent:execute"

[tool.ruff]
line-length = 88


[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "G004", "INP001", "ERA001", "COM812", "ISC001"]
mccabe.max-complexity = 6

[tool.uv]
dev-dependencies = ["pre-commit>=3.8.0", "ruff>=0.6.5"]
