[package]
name = "advent"
description = "Solutions to https://adventofcode.com/2023"
version = "0.0.1"
edition = "2021"
rust-version = "1.74.1"


[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["full"] }
log = "0.4.20"
simplelog = "0.11.2"
anyhow = { version = "1.0.79", features = ["backtrace"] }
regex = "1.10.2"
